--- a/client/package.json
+++ b/client/package.json
@@ -22,9 +22,11 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "materialize-css": "^1.0.0",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-redux": "^5.0.7",
+    "react-router-dom": "^4.3.1",
     "redux": "^4.0.1"
   },
   "devDependencies": {
