--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
   "homepage": "https://github.com/rojrun/leaf_devices#readme",
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "mysql": "^2.16.0",
+    "redux-form": "^8.1.0",
+    "redux-promise": "^0.6.0"
   },
   "devDependencies": {
     "nodemon": "^1.18.9",
