--- a/client/package.json
+++ b/client/package.json
@@ -27,7 +27,8 @@
     "react-dom": "^16.5.2",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
-    "redux": "^4.0.1"
+    "redux": "^4.0.1",
+    "redux-form": "^8.1.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.1.2",
