--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/rojrun/leaf_devices#readme",
   "dependencies": {
+    "cookie-session": "^1.3.3",
     "cors": "^2.8.5",
     "express": "^4.16.4",
     "mysql": "^2.16.0",
